--- a/ycapp/html/yichangguanli/html/health-record.html
+++ b/ycapp/html/yichangguanli/html/health-record.html
@@ -157,12 +157,12 @@
 		<dl class="jhadd bgc-fff dt-date-condition f-dn">
 			<dt class="tit p10 border-bom dt-part-time7" data-id="1">
 			<a href="javascript:void(0);" class="more">
-    			<i class="icon del"></i>
+    			<i class="icon del" style="background: url(../images/gouxun_icon.png) no-repeat;"></i>
     		</a>最近一周
 		</dt>
 			<dt class="tit p10 border-bom dt-part-time30" data-id="2">
 			<a href="javascript:void(0);" class="more">
-    			<i class="icon"></i>
+    			<i class="icon" style="background: url(../images/gouxun_icon.png) no-repeat;"></i>
   			</a>最近一月
 		</dt>
 			<dt class="tit p10 border-bom f-pr dt-custom" data-id="3">
