宜昌微信端修改

--- a/ycwx/html/qygl/html/search-community-doctor.html
+++ b/ycwx/html/qygl/html/search-community-doctor.html
@@ -24,7 +24,7 @@
 	<body>
 		<div class="searchbar searchbar-init">
 			<div class="searchbar-input">
-				<input type="search" placeholder="搜索机构或团队" class="" ><a href="javascript:void(0);" class="searchbar-clear"></a>
+				<input type="search" placeholder="搜索社区或团队" class="" ><a href="javascript:void(0);" class="searchbar-clear"></a>
 			</div>
 			<!--
             	描述： 当点击“查看更多”后hash值发生变化，同时增加了一条历史记录，所以返回之前页面需要history.go(-2)
@@ -37,7 +37,7 @@
 			<div id="community_wrapper" >
 				<div class="locate-city pl10 c-939398 pt10 pb10 pr10">
 					<!--<img src="../images/city@2x.png" class="pr10"></img>-->
-					机构</div>
+					社区</div>
 				<div class="pl10 list-wrap">
 					<ul id="community_list">
 						
@@ -64,7 +64,7 @@
 		<div id="more_community_warp" class="c-dn">
 			<div class="locate-city pl10 c-939398 pt10 pb10 pr10">
 				<!--<img src="../images/city@2x.png" class="pr10"></img>-->
-				机构</div>
+				社区</div>
 			<!--
             	描述： $('#more_community_warp').initScroll(...)时需要下面容器同时设置 class="scroll-wrapper"及id属性
             -->
