--- a/ycwx/html/qygl/html/search-community.html
+++ b/ycwx/html/qygl/html/search-community.html
@@ -23,7 +23,7 @@
 	<body>
 		<div class="searchbar searchbar-init">
 			<a href="search-community-doctor.html" class="searchbar-input">
-				<input type="search" placeholder="搜索机构或团队" class=""><a href="#" class="searchbar-clear"></a>
+				<input type="search" placeholder="搜索社区或团队" class=""><a href="#" class="searchbar-clear"></a>
 			</a>
 			<!--<a href="javascript: history.go(-1);" class="searchbar-cancel">取消</a>-->
 		</div>
@@ -31,7 +31,7 @@
 		<div id="community_view">
 			<div class="locate-city pl10 c-939398 pt10 pb10 pr10">
 				<!--<img src="../images/city@2x.png" class="pr10"></img>-->
-				团队所在机构</div>
+				团队所在社区</div>
 			<div class="pl10 pr10 area-list-wrap">
 				<ul id="community_list">
 					
