--- a/ycwx/html/qygl/html/search-doctor.html
+++ b/ycwx/html/qygl/html/search-doctor.html
@@ -23,16 +23,25 @@
     </style>
 	</head>
 	<body>
-		<div class="searchbar searchbar-init">
+		<!--<div class="searchbar searchbar-init">
 			<a href="search-community-doctor.html" class="searchbar-input">
-				<input type="search" placeholder="搜索机构或团队" class=""><a href="#" class="searchbar-clear"></a>
+				<input type="search" placeholder="搜索团队" class=""><a href="#" class="searchbar-clear"></a>
 			</a>
-			<!--<a href="javascript: history.go(-1);" class="searchbar-cancel">取消</a>-->
+		</div>-->
+		<div id="header">
+			<a href="javascript:void(0);" class="ui-grid c-h-80 c-fff" style="background: url(../../../images/jigou_bg.png);">
+			        <div class="ui-col-0 c-w-60 pt15 pl10 pb5" >
+			        	<img src="../../../images/hospital_default.png" class="c-w-60 c-h-50" style="border: 1px solid #FFF;"></img>
+			        </div>
+			        <div class="ui-col-1 pt15 ml20">
+			        	<div ><span class="c-f16 c-bold">思明区前埔社区卫生服务中心</span></div>
+			        	<div class="c-f14 ">思明区望海路102号</div>
+			        </div>
+			    </a>
 		</div>
 		<div id="doctor_view" >
-			<div class="locate-city pl10 c-939398 pt10 pb10 pr10 c-toe">
-				<!--<img src="../images/doctor@2x.png" class="pr10"></img>-->
-				<span class="community-name"></span>所有团队</div>
+			<!--<div class="locate-city pl10 c-939398 pt10 pb10 pr10 c-toe">
+				<span class="community-name"></span>所有团队</div>-->
 			<div id="area_list_wrapper" class="scroll-wrapper">
 				<div class="pl10 pr10 iScroller">
 					<ul id="doctor_list">
