医生app端   前后台临时调通 接口、页面访问url修改

--- a/ycapp/html/login/html/login.html
+++ b/ycapp/html/login/html/login.html
@@ -152,7 +152,8 @@
 		var docType = "";
 
 		function verifyLogin(mobile, verity) {
-			sendPost("login/doctor", {
+//			sendPost("login/doctor", { //***********原请求路径 20160905 yww 改
+			sendPost("doctor/login", {
 				mobile: mobile,
 				captcha: verity
 			}, null, function(res) {
@@ -162,6 +163,7 @@
 					var info = res.data;
 					docType = res.data.doctorType;
 					plus.storage.setItem("docType", docType+""); 
+					debugger
 					var iMei = plus.device.uuid;
 					var docId = info.id;
 					var uId = info.uid;
