医生app端页面修改

--- a/ycapp/html/yichangguanli/html/set.html
+++ b/ycapp/html/yichangguanli/html/set.html
@@ -84,13 +84,13 @@
 							<h4 class="c-nowrap">使用协议</h4>
 							<span class="list-icon arrow-right"></span> </div>
 					</li>-->
-					<li class=" c-list-function">
+					<!--<li class=" c-list-function">
 						<div class="c-avatar-s"><img src="../images/settings/icon6.png" alt="" /></div>
 						<div class="c-list-info">
 							<h4 class="c-nowrap">当前版本<span class="fr mr20" id="versioninfo">1.0.4</span></h4>
 
 						</div>
-					</li>
+					</li>-->
 				</ul>
 			</div>
 		</div>
