--- a/ycwx/html/qygl/html/search-community.html
+++ b/ycwx/html/qygl/html/search-community.html
@@ -49,7 +49,7 @@
 		<script type="text/html" id="community_li_tmpl">
 			{{each list as it}}
 			<li data-code="{{it.code}}">
-				<a href="search-doctor.html?hospital={{it.code}}&name={{it.name}}" class="ui-grid">
+				<a href="search-team.html?hospital={{it.code}}&name={{it.name}}" class="ui-grid">
 			        <div class="ui-col-0 width-70 pt5 pb5" >
 			        	<img src="{{it.photo||'../../../images/hospital_default.png'}}" class="br5 width-60 height-50"></img>
 			        </div>
