设备相关-前后端接口demo示例调用

--- a/ycwx/html/wdsb/html/edit-xueyaji.html
+++ b/ycwx/html/wdsb/html/edit-xueyaji.html
@@ -8,12 +8,12 @@
               content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
         <meta name="apple-mobile-web-app-capable" content="yes"/>
         <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
-        <link rel="stylesheet" href="../css/cross.css" type="text/css"/>
-        <link rel="stylesheet" href="../css/cross.ui.css" type="text/css"/>
+        <link rel="stylesheet" href="../../../css/cross.css" type="text/css"/>
+        <link rel="stylesheet" href="../../../css/cross.ui.css" type="text/css"/>
         <link rel="stylesheet" type="text/css" href="../iconfont/iconfont.css">
         <link rel="stylesheet" type="text/css" href="../../../css/ss-style.css">
          <link rel="stylesheet" type="text/css" href="../../../widget/artDialog/6.0.5/css/ui-dialog.min.css">
-         <link rel="stylesheet" type="text/css" href="../css/iscroll.css?11=11" /> 
+         <link rel="stylesheet" type="text/css" href="../../../css/iscroll.css?11=11" />
          <link rel="stylesheet" href="../css/edit-equipments.css?11=11" type="text/css"/>
         <script type="text/javascript" src="../../../js/common_http.js" ></script>
         <script type="text/javascript" src="../../../js/app.js" ></script>
