--- a/ycwx/html/wdsb/html/list-xueyaji.html
+++ b/ycwx/html/wdsb/html/list-xueyaji.html
@@ -8,11 +8,11 @@
               content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
         <meta name="apple-mobile-web-app-capable" content="yes"/>
         <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
-        <link rel="stylesheet" href="../css/cross.css" type="text/css"/>
-        <link rel="stylesheet" href="../css/cross.ui.css" type="text/css"/>
+        <link rel="stylesheet" href="../../../css/cross.css" type="text/css"/>
+        <link rel="stylesheet" href="../../../css/cross.ui.css" type="text/css"/>
         <link rel="stylesheet" type="text/css" href="../iconfont/iconfont.css">
         <link rel="stylesheet" type="text/css" href="../../../css/ss-style.css">
-        <link rel="stylesheet" type="text/css" href="../css/iscroll.css" /> 
+        <link rel="stylesheet" type="text/css" href="../../../css/iscroll.css" />
         <link rel="stylesheet" type="text/css" href="../../../widget/artDialog/6.0.5/css/ui-dialog.min.css">
         <link rel="stylesheet" href="../css/my-equipments.css" type="text/css"/>
        	<link rel="stylesheet" type="text/css" href="../../../widget/mobiscroll/2.15.1/css/mobiscroll.css">
