--- a/ycwx/html/wdsb/html/my-equipments.html
+++ b/ycwx/html/wdsb/html/my-equipments.html
@@ -103,7 +103,7 @@
 		<script src="../../../js/iscroll-probe.js"></script>
 		<script src="../../../js/iscroll-pull-up-down.js"></script>
 		<script src="../../../js/pull-up-down.js"></script>
-		<script src="../../../js/tounthcyc.js"></script>
+		<script src="../js/tounthcyc.js"></script>
         <script src="../js/my-equipments.js"></script>
     </body>
 </html>
