团队详细信息页面及患者端接口修改

--- a/ycwx/html/qygl/html/doctor-homepage.html
+++ b/ycwx/html/qygl/html/doctor-homepage.html
@@ -36,18 +36,19 @@
 			</div>
 			
 			
-			<!--<div class="slider-detail plr15 bgc-fff mtb10 c-border-tb">
+			<div id="team_member_warp" class="bgc-fff mt10 c-border-tb list-item-1">
+		        <div class="ui-grid ptb15 plr10 c-border-b">
+		        	<img src="../../../images/tuanduchengyuan_icon.png" class="c-w-20 c-h-20 c-vam"/>
+		            <div class="ui-col-1 c-vam pl5">
+		                <p class="tit-name c-nowrap c-f18 c-333">团队介绍</p>
+		            </div>
+		        </div>
 				<ul>
-					<li class="c-border-b">
-						<h2 class="c-f18">擅长</h2>
-						<p class="c-f16 show" id="expertise"></p>
-					</li>
 					<li>
-						<h2 class="c-f18">简介</h2>
 						<p class="c-f16 show" id="introduce"></p>
 					</li>
 				</ul>
-			</div>		-->
+			</div>		
 			<div id="team_member_warp" class="bgc-fff mt10 c-border-tb list-item-1">
 		        <div class="ui-grid ptb15 plr10 c-border-b">
 		        	<img src="../../../images/tuanduchengyuan_icon.png" class="c-w-20 c-h-20 c-vam"/>
@@ -55,6 +56,7 @@
 		                <p class="tit-name c-nowrap c-f18 c-333">团队成员</p>
 		            </div>
 		        </div>
+		        
 		        <ul id="team_member_list" class="c-list">
 		            
 		        </ul>
@@ -252,7 +254,7 @@
 			<div class="f-vam f-mr10 add-icon f-ib div-add-btn btn-main"></div>
 		</div>
 		<div class="h61">
-			<div class="plr15 pb15 bottom-btn-box c-border-t" id="btnSign"> 
+			<div class="plr15 pb15 bottom-btn-box c-border-t" id="btnSign">
 			</div>
 			<div id="btnMenu">
 				<div class="div-dialog-content ">
