--- a/ycapp/html/yichangguanli/html/daiqianyue.html
+++ b/ycapp/html/yichangguanli/html/daiqianyue.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<meta charset="utf-8">
-		<title>待签约</title>
+		<title>签约居民管理</title>
 		<link rel="stylesheet" type="text/css" href="../../../common/iconfont/iconfont.css">
 		<link rel="stylesheet" href="../../../common/cross/css/cross.css" type="text/css" />
 		<link rel="stylesheet" href="../../../common/cross/css/cross.ui.css" type="text/css" />
@@ -18,7 +18,7 @@
 		<div class="h45">
 			<div class="demo-comtop">
 				<a class="mui-action-back" style="display: none;"></a>
-				<h1>待 签 约</h1>
+				<h1>签约居民管理</h1>
 				<!--<div class="header-link">
 					<a onclick="fzgl()" class="link"><i class="iconfont icon-huanzheshezhi"></i></a>
 				</div>-->
@@ -44,7 +44,7 @@
 								<a href="javascript:;" id="daiqianyue">待签约</a>
 							</li>
 							<li>
-								<a href="javascript:;">未签约</a>
+								<a href="javascript:;" id="weiqianyue">未签约</a>
 							</li>
 						</ul>
 					</div>
