医生app端  已签约居民健康记录页面修改

--- a/ycapp/html/yichangguanli/html/health-record.html
+++ b/ycapp/html/yichangguanli/html/health-record.html
@@ -38,7 +38,7 @@
 			<div class="iScroller">
 				<ul class="c-lab-mor pt-tab c-f16">
 					<li id="tizhengLi" class="hit"><a href="#">体征记录</a></li>
-					<li id="healthLi"><a href="#">随防记录</a></li>
+					<li id="healthLi****"><a href="#">随防记录</a></li>
 				</ul>
 				<div id="tizhengList" class="pt-tab-list hit">
 					<div class="m-menu-link mt10">
