--- a/ycwx/html/qygl/html/agreement.html
+++ b/ycwx/html/qygl/html/agreement.html
@@ -1,68 +1,50 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8" />
-		<meta name="author" content="yihu.com" />
-		<meta name="format-detection" content="telephone=no" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-		<meta name="apple-mobile-web-app-capable" content="yes" />
-		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
-		<title>家庭医生签约协议</title>
-		<link rel="stylesheet" href="../css/cross.css" type="text/css" />
-		<link rel="stylesheet" href="../font-awesome/css/font-awesome.min.css" type="text/css" />
-		<link rel="stylesheet" type="text/css" href="../../../widget/artDialog/6.0.5/css/ui-dialog.min.css">
-		<link rel="stylesheet" href="../css/argument.css" type="text/css" />
-	</head>
-	<body class="c-333 lhp150 pl10 pr10">
-		<div class="c-t-center height-38 lheight-38 c-fwb c-bb1">家庭医生签约协议</div>
-		<div class="mt10">
-			<p class="c-ti2 c-f13">乙方自愿邀请甲方为其家庭健康服务医生。为提高本社区居民健康管理水平，推行社区卫生服务契约化，甲乙双方本着平等、尊重和自愿的原则，签订此协议，接受以下条款的约定：</p>
-			<p class="c-ti2 c-f13">一、甲方作为服务的提供者，主要提供基本医疗、基本公共卫生服务和个性化服务项目。</p>
-			<p class="c-f13 c-fwb">甲方承诺为乙方提供以下签约服务：</p>
-			<p class="c-f13 c-fwb">1．基本医疗服务</p>
-			<p class="c-ti2 c-f13">1.1 提供一般常见病、多发病、诊断明确的慢性病VIP诊疗服务（相对独立就诊服务区，每次诊疗时间不低于10分钟，个性化健康指导）。        </p>
-			<p class="c-f13 c-fwb">2.免费提供以下基本公共卫生服务</p>
-			<p class="c-ti2 c-f13">2.1 居民健康档案的建立和维护；</p>
-			<p class="c-ti2 c-f13">2.2 健康评估、健康促进、健康干预；</p>
-			<p class="c-ti2 c-f13">2.3 0~6岁儿童健康管理；</p>
-			<p class="c-ti2 c-f13">2.4 孕产妇健康管理；</p>
-			<p class="c-ti2 c-f13">2.5 老年人健康管理服务；</p>
-			<p class="c-ti2 c-f13">2.6 预防接种服务；</p>
-			<p class="c-ti2 c-f13">2.7 传染病报告和处理；</p>
-			<p class="c-ti2 c-f13">2.8 高血压患者健康管理；</p>
-			<p class="c-ti2 c-f13">2.9 Ⅱ型糖尿病患者健康管理；</p>
-			<p class="c-ti2 c-f13">2.10 重性精神疾病患者管理；</p>
-			<p class="c-ti2 c-f13">2.11 中医药健康管理。</p>
-			<p class="c-f13 c-fwb">3.免费提供以下个性化服务</p>
-			<p class="c-ti2 c-f13">3.1 由专科医师个性化技术指导。根据病情需求，由家庭医生预约，接受三级医院专科医师技术指导。 </p>
-			<p class="c-ti2 c-f13">3.2 由“家庭医生服务团队”提供个性化健康管理、健康评估、健康咨询服务。协助签约居民参与社区自我健康管理团体活动，开展自我健康管理。利用手机APP、或微信公众号服务平台，提供便捷的健康咨询服务。</p>
-			<p class="c-ti2 c-f13">3.3 上级医院专家预约服务及转诊服务。优先提供上级医院专家门诊预约（根据病情优先享受名院、名科、名医预约服务）、大型仪器设备检查预约及根据病情需要的转诊服务。</p>
-			<p class="c-ti2 c-f13">3.4 社区门诊预约服务。家庭医生会根据病情有针对性的为签约居民办理下次门诊预约服务。</p>
-			<p class="c-ti2 c-f13">3.5 为高血压、糖尿病等慢性病签约对象提供“三师共管”慢病精细化管理服务。重点为高血压、糖尿病等慢性病人提供日常随访、定期检查及全程健康管理等服务。根据病情发展及控制情况提供适时动态转库服务。病情不稳定期纳入强化管理库，由三师提供强化管理服务；病情稳定期纳入常规管理库，在专科医师指导下由全科医生团队提供常规管理服务；强化管理库及常规管理库病人依据病情实行动态流动，需转专科医师时优先及时安排。</p>
-			<p class="c-ti2 c-f13">3.6 为65岁以上老人提供日常随访、定期检查及全程健康管理等服务。为80岁以上老年人及失能半失能老人免费提供每年不少于一次上门出诊服务。签约老人可享受包括测血压、体格检查、用药指导、健康咨询等服务。</p>
-			<p class="c-f13 c-fwb">4. 参加厦门市基本医疗保险的本市户籍人员可享受以下医保优惠政策：</p>
-			<p class="c-ti2 c-f13">4.1 根据上级医院用药长期医嘱，向慢性病患者开具4-8周(含慢性病相关辅助用药)的门诊用药处方。</p>
-			<p class="c-ti2 c-f13">4.2 在基层医疗卫生机构或医保定点门诊部就医，门诊医疗费不设起付标准，即参保职工个人医疗账户用完后直接进入社会统筹医疗基金支付段，参保居民直接进入社会统筹医疗基金支付段。</p>
-			<p class="c-ti2 c-f13">4.3 住院医疗费不设二次及以上起付标准。
-			<p class="c-f13 c-fwb">5.签约对象在享受上述签约服务外，还可享受以下服务项目：</p>
-			<p class="c-ti2 c-f13">5.1 为有康复需求的康复患者免费建立康复、训练档案。提供针对性康复训练和康复治疗服务，相关服务按物价部门制定的标准收取服务费。</p>
-			<p class="c-ti2 c-f13">5.2 为有需要的签约居民提供建立家庭病床、导尿、换药、上门测血糖、上门抽血检验等有偿上门服务。乙方需要甲方提供出诊等上门适宜医疗服务（不提供院外静脉输液），须先通过甲方的医学安全性评估，并签订相关免责申明。</p>
-			<p class="c-ti2 c-f13">5.3 优先安排彩超、肿瘤标志物检查、眼底筛查、24小时动态血压监测、糖尿病足筛查、尿微量蛋白检测等基本医疗收费项目及慢性疾病筛查服务项目。</p>
-			<p class="c-ti2 c-f13">二、乙方自愿接受服务项目，将自己的身体健康状况及变化情况及时告知甲方，积极配合甲方的服务。</p>
-			<p class="c-ti2 c-f13">三、甲方提供上述约定的免费服务项目不得另行收取其他费用。提供非约定的医疗卫生服务或向非签约居民提供医疗卫生服务，按规定收取费用。协议双方可通过协商，增加、细化个性化服务项目，如涉及收费项目，则按照有关文件标准执行。</p>
-			<p class="c-ti2 c-f13">本协议书一式两份，甲方、乙方各执一份，自双方签字之日起生效，有效期为1年。有效期内，乙方如因居住地变更等特殊原因需解除协议的，可由乙方提出书面申请，经双方签字确认解约。有效期满后，乙方可选择续约或解约。　</p>
-		</div>
-		<div id="agree_btn">
-			我已认真阅读并同意该协议
-		</div>
-		<script type="text/javascript" src="../../../js/jquery/2.1.3/jquery.js"></script>
-		<script src="../js/underscore.js"></script>
-		<script src="../js/es6-promise.js"></script>
-		<script src="../../../js/template.js"></script>
-		<script src="../../../js/common_http.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../../../widget/artDialog/6.0.5/js/dialog-plus.min.js"></script>
-		<script src="../../../js/weixin_common.js"></script>
-		<script src="../js/argument.js"></script>
-	<body>
-	</body>
+<head>
+	<meta charset="utf-8" />
+	<meta name="author" content="yihu.com" />
+	<meta name="format-detection" content="telephone=no" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+	<meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+	<title>家庭医生签约协议</title>
+	<link rel="stylesheet" href="../css/cross.css" type="text/css" />
+	<link rel="stylesheet" href="../font-awesome/css/font-awesome.min.css" type="text/css" />
+	<link rel="stylesheet" type="text/css" href="../../../widget/artDialog/6.0.5/css/ui-dialog.min.css">
+	<link rel="stylesheet" href="../css/argument.css" type="text/css" />
+</head>
+<body class="c-333 lhp150 pl10 pr10">
+<div class="c-t-center height-38 lheight-38 c-fwb c-bb1">签约服务协议书</div>
+<div class="mt10">
+	<p class="c-ti2 c-f13">为逐步实现“户户拥有家庭医生，人人享有卫生服务”的目标，全面提高社区居民的健康水平，乙方自愿请甲方作为全科（家庭）医生，经双方协商，签订如下协议：</p>
+	<p class="c-f13 c-fwb">一、甲方职责和义务：</p>
+	<p class="c-ti2 c-f13">（一）提供免费健康咨询，给予医疗、预防、保健等方面的建议与指导。        </p>
+	<p class="c-ti2 c-f13">（二）免费对乙方成员进行健康咨询及健康问卷调查，建立健康档案，定期通过多种形式发送健康养生、保健知识，每年免费进行1次健康评估及健康干预与指导。</p>
+	<p class="c-ti2 c-f13">（三）为乙方成员提供一般常见病、多发病的诊疗服务；也可为乙方中行动不便的家庭成员提供上门服务（出诊）。</p>
+	<p class="c-ti2 c-f13">（四）如乙方成员遇有疑难、急重症或受条件限制，需要转上级医院诊疗时，甲方要及时提供转诊服务。</p>
+	<p class="c-ti2 c-f13">（五）免费提供国家基本公共卫生服务项目服务。</p>
+	<p class="c-ti2 c-f13">（六）甲方向乙方成员提供的约定家庭医生签约服务包内容，基本医疗中的诊疗服务和中医服务项目首次减免50%，其他项目免费。提供非约定的医疗卫生服务医疗卫生服务，按规定收取费用。</p>
+	<p class="c-f13 c-fwb">二、乙方权利和义务</p>
+	<p class="c-ti2 c-f13">（一）自愿聘请甲方为全科（家庭医生），成为乙方成员的服务对象，配合乙方的工作，服从甲方的健康管理，享受“宜昌市家庭医生签约服务”的服务优惠。 </p>
+	<p class="c-ti2 c-f13">（二）乙方成员原则上只能和一个团队签约，若签约团队成员因故不能提供服务，由社区服务中心指派其他团队成员临时提供服务。需甲方为行动不便者上门服务（出诊）时，乙方应提前与甲方预约。</p>
+	<p class="c-ti2 c-f13">（三）乙方成员应主动配合甲方开展上述服务，将身体健康状况、变化情况及与健康相关的信息、资料及时、准确告知甲方，并保证相关信息、资料的真实性、合法性。甲方给乙方成员提供服务的过程中，因乙方成员对甲方隐瞒病史信息、或不执行甲方制定的防治方案、不听从指导意见而影响到服务质量，其产生的后果由乙方成员承担。</p>
+	<p class="c-f13 c-fwb">三、乙方成员对甲方不满意，可向社区卫生服务中心或者区卫生计生局反映，协调不满意时，可申请更换签约医生团队。</p>
+	<p class="c-f13 c-fwb">四、根据国家有关法律法规，甲方必须保护乙方成员相关健康信息及隐私。</p>
+	<p class="c-f13 c-fwb">五、乙方成员在其他医疗机构接受的医疗行为由其他医疗机构负责。</p>
+	<p class="c-f13 c-fwb">六、本协议自签订之日起生效，协议书与附件具有同等法律效力，有效期一年，期满自动解约。</p>
+	<p class="c-f13 c-fwb">七、本协议一式两份，甲、乙双方各执一份。</p>
+</div>
+<div id="agree_btn">
+	我已认真阅读并同意该协议
+</div>
+<script type="text/javascript" src="../../../js/jquery/2.1.3/jquery.js"></script>
+<script src="../js/underscore.js"></script>
+<script src="../js/es6-promise.js"></script>
+<script src="../../../js/template.js"></script>
+<script src="../../../js/common_http.js" type="text/javascript" charset="utf-8"></script>
+<script src="../../../widget/artDialog/6.0.5/js/dialog-plus.min.js"></script>
+<script src="../../../js/weixin_common.js"></script>
+<script src="../js/argument.js"></script>
+<body>
+</body>
 </html>
