团队详细信息页面修改

--- a/ycwx/html/qygl/html/agreement.html
+++ b/ycwx/html/qygl/html/agreement.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
-		<title>家庭医生签约协议</title>
+		<title>开始签约</title>
 		<link rel="stylesheet" href="../css/cross.css" type="text/css" />
 		<link rel="stylesheet" href="../font-awesome/css/font-awesome.min.css" type="text/css" />
 		<link rel="stylesheet" type="text/css" href="../../../widget/artDialog/6.0.5/css/ui-dialog.min.css">
@@ -58,7 +58,6 @@
 		<script type="text/javascript" src="../../../js/jquery/2.1.3/jquery.js"></script>
 		<script src="../js/underscore.js"></script>
 		<script src="../js/es6-promise.js"></script>
-		<script src="../../../js/template.js"></script>
 		<script src="../../../js/common_http.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../../widget/artDialog/6.0.5/js/dialog-plus.min.js"></script>
 		<script src="../../../js/weixin_common.js"></script>
