--- a/ycwx/html/qygl/html/doctor-homepage.html
+++ b/ycwx/html/qygl/html/doctor-homepage.html
@@ -284,7 +284,8 @@
 		<script type="text/html" id="member_li_tmpl">
 			{{each list as it}}
 			<li data-code="{{it.code}}" class="c-list sever-list">
-				<a href="javascript:void(0);" class="ui-grid c-000">
+				<a href="../html/doctor-info.html?doctorCode={{it.code}}" class="ui-grid c-000">
+					 <span class="list-icon arrow-right"></span>
 			        <div class="ui-col-0 c-w-60 pt5 pb5" >
 			        	<img src="{{it.photo||(it.sex==1?'../../../images/d-male.png':'../../../images/d-female.png')}}" class="c-br50 c-w-50 c-h-50"></img>
 			        </div>
@@ -292,7 +293,6 @@
 			        	<div ><span class="c-f16 c-bold">{{it.name}}</span></div>
 			        	<div class="c-f14 c-666666">{{it.orgName}}</div>
 			        </div>
-			         <span class="list-icon arrow-right"></span>
 			    </a>
 			</li>
 			 {{/each}}
