--- a/ycwx/html/qygl/html/doctor-info.html
+++ b/ycwx/html/qygl/html/doctor-info.html
@@ -10,7 +10,6 @@
 		<title>医生主页</title>
 		<link rel="stylesheet" type="text/css" href="../../../css/cross.css" />
 		<link rel="stylesheet" type="text/css" href="../../../css/cross.ui.css" />
-		<link rel="stylesheet" type="text/css" href="../../../iconfont/iconfont.css" />
 		<link rel="stylesheet" type="text/css" href="../../../css/extension.ui.css">
 		<link rel="stylesheet" type="text/css" href="../../../css/sq-style.css" />	
 		<link rel="stylesheet" type="text/css" href="../../../widget/artDialog/6.0.5/css/ui-dialog.min.css">
@@ -29,12 +28,13 @@
 				<span class="sdimg fl">
 					<img id="photo" src="" class="c-images-cycle">
 				</span>
-				<p class="c-t-left c-f18">
-					<span id="teamCode" style="display: none;"></span>
-					<span id="teamName" class="c-f20 mr10 ml10"></span><label id="teamName"></label></p>
-			     <p class="c-t-left c-f16 c-toe f-dn">
-			     	<span id="hospitalCode" style="display: none;"></span>
-			    	<span id="orgName" class="mr10 ml10"></span></p>			
+	    	<p class="c-t-left c-f16 c-toe f-dn">
+			     	<span id="doctorCode" style="display: none;"></span>
+			    	<span id="doctorName" class="mr10 ml10"></span>
+		    		<span id="jobName" class="mr10 ml10"></span></p>
+    		<p class="c-t-left c-f18">
+					<span id="orgCode" style="display: none;"></span>
+					<span id="orgName" class="c-f20 mr10 ml10"></span><label id="teamName"></label></p>
 			</div>
 			
 		</div>
@@ -61,7 +61,7 @@
 		<link rel="stylesheet" type="text/css" href="../../../widget/mobiscroll/2.15.1/css/mobiscroll.css">
 		<script src="../../../widget/mobiscroll/2.15.1/js/mobiscroll.js"></script>
 		<script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-		<script src="../js/doctor-homepage.js"></script>
+		<script src="../js/doctor-info.js"></script>
 	</body>
 
 </html>
