--- a/ycwx/html/qygl/html/sign-success.html
+++ b/ycwx/html/qygl/html/sign-success.html
@@ -18,7 +18,11 @@
 			<img src="../../../images/chenggong_img.png" class="c-w-20 c-h-20 c-vam"/>
 		</div>
 		<div class="remind_class" >
-			您的签约申请已提交 我们将会联系您到社区签订纸质签约 服务协议，请保持电话畅通。
+			<div class="div-content">您的签约申请已提交<br/>我们将会联系您到社区签订纸质签约<br/>服务协议，请保持电话畅通。</div>
+		<div class="div-remark">
+			<span class="mr10 f-fs14 f-tac c-74bf00">(5)</span>
+			<span class="f-fs14 f-tac c-909090">秒后跳转</span>
+		</div>
 		</div>
 		<script type="text/javascript" src="../../../js/jquery/2.1.3/jquery.js"></script>
 		<script src="../js/underscore.js"></script>
