--- a/ycapp/html/yichangguanli/html/health-record.html
+++ b/ycapp/html/yichangguanli/html/health-record.html
@@ -31,10 +31,10 @@
         <h1>健康记录</h1>
     </div>
 </div>-->
-		<div id="docInfo" style="height: 120px;"></div>
+		<div id="docInfo" style="height: 120px; z-index: 100;"></div>
 		
 
-		<div id="wrapper" style="padding-top: 120px;">
+		<div id="wrapper" style="margin-top: 120px;height: 100%">
 			<div class="iScroller">
 				<ul class="c-lab-mor pt-tab c-f16">
 					<li id="tizhengLi" class="hit"><a href="#">体征记录</a></li>
